// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bff server plugin prepareApiServer should work well 1`] = `
Array [
  Object {
    "handler": [Function],
    "httpMethod": "GET",
    "name": "get",
    "routeName": "/hello",
    "routePath": "/hello",
  },
  Object {
    "handler": [Function],
    "httpMethod": "PATCH",
    "name": "patch",
    "routeName": "/hello",
    "routePath": "/hello",
  },
  Object {
    "handler": [Function],
    "httpMethod": "GET",
    "name": "get",
    "routeName": "/upload",
    "routePath": "/upload",
  },
  Object {
    "handler": [Function],
    "httpMethod": "GET",
    "name": "get",
    "routeName": "/user/:id",
    "routePath": "/user/:id",
  },
]
`;

exports[`bff server plugin prepareApiServer should work well with prefix 1`] = `
Array [
  Object {
    "handler": [Function],
    "httpMethod": "GET",
    "name": "get",
    "routeName": "/hello",
    "routePath": "/api/hello",
  },
  Object {
    "handler": [Function],
    "httpMethod": "PATCH",
    "name": "patch",
    "routeName": "/hello",
    "routePath": "/api/hello",
  },
  Object {
    "handler": [Function],
    "httpMethod": "GET",
    "name": "get",
    "routeName": "/upload",
    "routePath": "/api/upload",
  },
  Object {
    "handler": [Function],
    "httpMethod": "GET",
    "name": "get",
    "routeName": "/user/:id",
    "routePath": "/api/user/:id",
  },
]
`;
